--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </html>
 <script src="./runapi.js"></script>
 <script>
-    var isSound = true;
+    var isSound = false;
     const onBtn = document.getElementById('onBtn')
     const offBtn = document.getElementById('offBtn')
 
