--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monaco Editor Example</title>
+    <title>Python Custom Editor </title>
     <link rel="stylesheet" href="./app.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -36,7 +36,7 @@
             }
             monaco.languages.registerHoverProvider("mySpecialLanguage", {
                 provideHover: function (model, position) {
-                    const code = model.getValue()
+                    const code = model.getValue() //getting all the values 
                     const line = model.getLinesContent()
                     const wordInfo = model.getWordAtPosition(position)
                     // Pause the audio
@@ -48,6 +48,7 @@
                         }
                     ];
 
+
                     const str = code.trim();
                     let count = 0;
                     const forArray = [];
@@ -58,7 +59,7 @@
                         const lastIndent = previousSpace[previousSpace.length - 1];
                         const currentIndent = countLeadingWhitespace(text);
 
-
+                        var flag = false
 
                         // Construct the line with line number and indentation count
                         let lineContent = `${text}`;
@@ -71,6 +72,7 @@
                                 'count': 1,
                                 'i': currentIndent
                             })
+                            flag = true
 
                         } else if (lastIndent > currentIndent && text.includes('for')) {
                             count--;
@@ -81,6 +83,8 @@
                                 'count': count,
                                 'i': currentIndent
                             })
+                            flag = true
+
                         } else if (lastIndent < countLeadingWhitespace(text) && text.includes('for')) {
                             count++;
                             previousSpace.push(currentIndent);
@@ -90,13 +94,16 @@
                                 'count': count,
                                 'i': currentIndent
                             })
+                            flag = true
+
                         } else {
                             let uCount = countIndent.find((f) => f.i == currentIndent)
-                            console.log(uCount)
-                            console.log('last indent------', lastIndent)
-                            console.log('curr indent------', currentIndent)
+
                             // console.log(count)
                             if (uCount?.count == 0 || uCount?.count) {
+                                console.log(uCount)
+                                // console.log('last indent------', lastIndent)
+                                // console.log('curr indent------', currentIndent)
                                 if (uCount.count == 0) {
                                     if (lastIndent === currentIndent && text.includes('for')) {
                                         count = 1
@@ -143,7 +150,6 @@
                     }
                     else {
                         playBeep(0)
-
                     }
                     // newStr.map((value) => {
                     //     console.log(value)
@@ -198,6 +204,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-7 col-lg-6">
+                    <ul>
+                        <li>Press Shift +Enter : Run Code</li>
+                        <li>Press Alt +s/S : Sound On /off</li>
+                    </ul>
                     <div class="title-btn d-flex justify-content-center p-4 ml-auto">
                         <button class="btn btn-outline-primary me-2" onclick="runCode()">Run Code</button>
                         <button class="btn btn-outline-primary" onclick="onSound(true)" id="onBtn">
@@ -262,6 +272,18 @@
         }
 
     };
+
+    document.addEventListener('keydown', function (event) {
+
+        if (event.shiftKey && event.key === 'Enter') {
+            runCode();
+        }
+
+        // Toggle sound on/off when 'S' key is pressed
+        if (event.altKey && event.key === 's' || event.key === 'S') {
+            onSound(!isSound);
+        }
+    });
 </script>
 
 
